--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <br>
 </div>
 <div>
-<img src="imagenes/2016-02-23-14-36-15-339.jpg" width="50%" height="50%"></div>
+<img src="imagenes/2016-02-23-14-36-15-339.png" width="50%" height="50%"></div>
 </div>
 </div>
 
@@ -87,7 +87,7 @@
  </div>
  </div>
  <div data-role="footer" data-theme="a">
- <h4>Aplicacion Uno, JAGH</h4>
+ <h4>Aplicacion Uno, LSR</h4>
  </div>
  </div>
  </div>
@@ -101,7 +101,7 @@
 <h2>10 de Septiembre de 1998</h2></div>
 </div>
 <div data-role="footer" data-theme="a">
-<h4>Aplicacion Uno, JAGH</h4>
+<h4>Aplicacion Uno, LSR</h4>
 </div>
 </div>
 </div>
@@ -115,7 +115,7 @@
 <h2>Lago Uron 2"A"</h2></div>
 </div>
 <div data-role="footer" data-theme="a">
-<h4>Aplicacion Uno, JAGH</h4>
+<h4>Aplicacion Uno, LSR</h4>
 </div>
 </div>
 </div>
@@ -127,11 +127,11 @@
 <div data-role="content" align="center">
 <div>
 <h2>Correr</h2>
-<img src="imagenes/deporte.jpg" width="50%" height="50%">
+<img src="imagenes/deporte.png" width="50%" height="50%">
 </div>
 </div>
 <div data-role="footer" data-theme="a">
-<h4>Aplicacion Uno, JAGH</h4>
+<h4>Aplicacion Uno, LSR</h4>
 </div>
 </div>
 </div>
@@ -143,9 +143,10 @@
 <div data-role="content" align="center">
 <div>
 <h2>dormir</h2></div>
+<img src="imagenes/pasatiempo.png" width="50%" height="50%">
 </div>
 <div data-role="footer" data-theme="a">
-<h4>Aplicacion Uno, JAGH</h4>
+<h4>Aplicacion Uno, LSR</h4>
 </div>
 </div>
 </div>
