--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 </div>
 
 <div>
-<ul data-role="listview" data-theme="b" class="ui-listview" ui-grupo.theme-b">
+<ul data-role="listview" data-theme="b" class="ui-listview" ui-grupo-theme-b">
 <li class="ui-first-child ui-last-child">
-<a href=""#Paguina1" class="ui-btn-icon-right ui-icon-carat-r">
+<a href=""#Pagina1" class="ui-btn-icon-right ui-icon-carat-r">
 <h2>Datos generales</h2>
 <p>Se muestra el nombre</p>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
-<a href="#Paqina2" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+<a href="#Pagina2" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Fecha de nacimiento</h2>
 <p>Se muestra el día, mes y año de nacimiento</p>
 </a>
@@ -53,13 +53,13 @@
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
-<a href="Pagina4" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+<a href="#Pagina4" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Deporte favorito</h2>
 <p>Muestra el deporte que mas le agrada al alumno </p>
 </a>
 </li>
 <li class="ui-first-child ui-btn-icon-right ui-icon-carat-r">
-<a href="#Paqina5" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+<a href="#Pagina5" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>OTROS GUSTOS E INTERESES</h2>
 <P>Muestra otros gustos del alumno</p>
  </a>
