--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 </div>
 
 <div>
-<ul data-role="listview" data-theme="b" class="ui-listview" ui-grupo-theme-b">
+<ul data-role="listview" data-theme="b" class="ui-listview" ui-group-theme-b">
 <li class="ui-first-child ui-last-child">
-<a href=""#Pagina1" class="ui-btn-icon-right ui-icon-carat-r">
+<a href=""#Pagina1" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Datos generales</h2>
 <p>Se muestra el nombre</p>
 </a>
@@ -58,7 +58,7 @@
 <p>Muestra el deporte que mas le agrada al alumno </p>
 </a>
 </li>
-<li class="ui-first-child ui-btn-icon-right ui-icon-carat-r">
+<li class="ui-first-child ui-last-child">
 <a href="#Pagina5" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>OTROS GUSTOS E INTERESES</h2>
 <P>Muestra otros gustos del alumno</p>
@@ -78,7 +78,7 @@
  </div>
  
  <div data-role="page" id="#Pagina1" data-add-back-btn="true" data-theme="a">
- <div data-role="header" data-add-back-btn="true" data-theme="a">
+ <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
  <h1>NOMBRE</h1>
  </div>
  <div data-role="content" align="center">
